fix spacing

--- a/css/style.css
+++ b/css/style.css
@@ -306,7 +306,7 @@ main.clear a.btn-white{
 
 .highlights i{
   margin: 0.5em 0;
-  padding-top: 2em;
+  padding-top: 1em;
 }
 
 
